fix display on mobile

--- a/app/styles/_section_kit-footer.scss
+++ b/app/styles/_section_kit-footer.scss
@@ -25,6 +25,10 @@
   .centered {
 	  margin-bottom: 60px;
   }
+  .socials {
+	  width: 100%;
+	  height: 40px;
+  }
   .social {
 	  float: left;
 	  margin-right: 15px;
